--- a/free-nodes/page-19.htm
+++ b/free-nodes/page-19.htm
@@ -87,6 +87,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-04-18">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-4-18-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/34661d96c32475b8df65ddfa1ef2f56e.webp" alt="4月18日更新22.6M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-4-18-free-v2ray.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">4月18日更新22.6M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了韩国、美国、日本、欧洲、香港、加拿大、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月18日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-04-17">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -240,23 +257,6 @@
                                 4月9日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-04-08">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-4-8-clash-windows.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="4月8日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-4-8-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">4月8日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、加拿大、美国、韩国、香港、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月8日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-18.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-16.htm">16</a></li><li><a href="/free-nodes/page-17.htm">17</a></li><li><a href="/free-nodes/page-18.htm">18</a></li><li class="active"><span>19</span></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li><a href="/free-nodes/page-22.htm">22</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-20.htm">&raquo;</a></li></ul>            </div>
@@ -266,8 +266,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-20-free-clash.htm">2月20日19.2M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、韩国、香港、加拿大、新加坡、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-26-node-share.htm">7月26日更新20.2M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、香港、加拿大、欧洲、日本、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -276,8 +276,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-15-node-share-links.htm">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、加拿大、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-8-free-node-subscribe.htm">8月8日更新20.2M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、欧洲、日本、美国、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -286,8 +286,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-11-free-clash-subscribe.htm">8月11日更新22M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、香港、美国、日本、欧洲、新加坡等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-22-clash-v2ray-ss-ssr.htm">7月22日更新19.4M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、香港、韩国、新加坡、美国、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -296,28 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-18-free-shadowrocket-node.htm">3月18日20.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、美国、香港、新加坡、欧洲、韩国等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-20-clash-windows.htm">5月20日更新18.6M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、日本、美国、加拿大、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-24-clash-windows.htm">5月24日更新19.2M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、欧洲、美国、香港、加拿大、日本等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-28-free-shadowrocket-node.htm">5月28日更新20.9M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、美国、新加坡、韩国、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -336,8 +316,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-2-free-ssr-node.htm">3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、香港、美国、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-19-free-ssr-node.htm">10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、加拿大、香港、韩国、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -346,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-18-free-v2ray.htm">4月18日更新22.6M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、日本、欧洲、香港、加拿大、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-19-clash-v2ray-ss-ssr.htm">8月19日更新21.7M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、香港、新加坡、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -356,8 +336,28 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-30-shadowrocket-node.htm">4月30日更新18.6M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、欧洲、美国、日本、香港等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、香港、新加坡、加拿大、日本、欧洲等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-5-11-free-high-speed-nodes.htm">5月11日更新19.2M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、新加坡、美国、韩国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-6-23-free-high-speed-nodes.htm">6月23日更新19.3M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、加拿大、美国、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -368,7 +368,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
                                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-07/" title="2024-07 归档">2024-07</a></h4>
